$Id: History,v 1.14 2000-11-03 06:15:30 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
- Nov 03 ,00 H.Kurashige (procman-V02-00-00)
- Fixed bugs in G4ProcTblElement::operator=
- Remove destruction of processes in G4ProcessTable::~G4ProcessTable()
- STL migration in G4ProcessVector 
- Add thePILfactor and GPIL methods in G4VProcess

- May 12 ,00 H.Kurashige (procman-V01-01-00)
-  small bug fix in G4ProcessManager.cc

- Mar. 02, 00 H.Kurashige (procman-V01-00-01)
-  Use STL vector instead of  RW vectors (except for G4PhysicsVector) 
-  Add registration of process into ProcessTable in copy constructor  

- Feb. 25, 00 H.Kurashige (procman-V01-00-00)
-  Remove G4RhoZero from G4ParticleTypes.hh


- Nov. 7, 99 H.Kurashige (procman-V00-01-01)
-  Added comments in header files for "Software Reference Manual"

- Oct 5, 99 H.Kurashige (procman-V00-01-00)
- No process will be added if not IsApplicable

- June 17, 99 H.Kurashige (procman-01-00-04)
- Disable Activate/InactivateProcess methods in G4ProcessManager 
  (and related UI commands) in "Init" state 

- May 3,  99 H.Kurashige (procman-01-00-03a)
- Add G4ProcessManager::GetProcessActivation 

- Apr 30, 99 H.Kurashige (procman-01-00-03)