@@ -1,4 +1,4 @@
-$Id: History,v 1.14 2000-11-03 06:15:30 kurasige Exp $
+$Id: History,v 1.15 2000-11-08 00:47:20 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+- Nov 08, 00    H.Kurashige (procman-V02-00-01)
+- Added  Store/RetrievePhysicsTable (virtual) methods
+
 - Nov 03 ,00 H.Kurashige (procman-V02-00-00)
 - Fixed bugs in G4ProcTblElement::operator=
 - Remove destruction of processes in G4ProcessTable::~G4ProcessTable()
